--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="//unpkg.com/docsify-edit-on-github/index.js" />
 </head>
 <body>
+<h1>teste</h1>
   <div id="app"></div>
   <script>
 
